network-policies/pod-client.yaml
---
apiVersion: v1
kind: Pod
metadata:
  name: pod-client
  namespace: developer
  labels:
    curso: rancher
spec:
  containers:
  - name: busyboxplus
    image: radial/busyboxplus
    imagePullPolicy: IfNotPresent
    command:
      - sleep
      - "3600"
