network-policies/1-network-policy-deny-all.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 1-network-policy-deny-all
  namespace: developer
spec:
  podSelector: {}
  policyTypes:
    - Ingress
    - Egress
