network-policies/3-ingress-pod-client-from-webserver.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 3-ingress-webserver-from-pod-client
  namespace: developer
spec:
  podSelector:
    matchLabels:
      app: php
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              curso: rancher
      ports:
        - protocol: TCP
          port: 80
