network-policies/5-allow-internet-webserver-to-egress.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: 5-allow-internet-webserver-to-egress
  namespace: developer
spec:
  podSelector:
    matchLabels:
      app: php
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector: {}
  - to:
    - ipBlock:
        cidr: '0.0.0.0/0'
